feat: expose api for elecprice message hyperlink
